# rig-book

./: .gitignore  CNAME  README.md  book.toml  llms.txt  robots.txt  todo.md
.github/workflows/: deploy.yml
snippets/: Cargo.toml  README.md  rust-toolchain.toml
snippets/dynamic-model-creation/: Cargo.toml
snippets/dynamic-model-creation/src/: main.rs
snippets/memory/: Cargo.toml  README.md
snippets/memory/src/: main.rs
snippets/model-routing/: Cargo.toml
snippets/model-routing/src/: main.rs
snippets/multi-agent-systems/: Cargo.toml
snippets/multi-agent-systems/src/: main.rs
snippets/observability/: Cargo.toml
snippets/observability/src/: lib.rs
snippets/rag/: Cargo.toml
snippets/rag/src/: main.rs
snippets/rig-api-call/: Cargo.toml  README.md
snippets/rig-api-call/src/: main.rs
snippets/tool-calling/: Cargo.toml
snippets/tool-calling/src/: main.rs
src/: SUMMARY.md
src/intro/: how-to-use-this-book.md  index.md  what-are-ai-agents-rust.md  who-is-this-book-for.md
src/playbook/: dynamic-model-creation.md  memory.md  model-routing.md  multi-agent-systems.md  observability.md  production-patterns.md  rag.md  rig-api-call.md  tool-calling.md
