[workspace]
resolver = "3"
members = ["dynamic-model-creation","memory", "model-routing", "multi-agent-systems", "observability","rag","rig-api-call", "tool-calling"]

[workspace.dependencies]
rig-core = "0.27.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
