[package]
name = "observability"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[dependencies]
rig-core = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["tonic", "trace"] }
